--- a/roles/tobiko-infrared/tasks/infrared/exec.yml
+++ b/roles/tobiko-infrared/tasks/infrared/exec.yml
@@ -6,12 +6,13 @@
     source "{{ tobiko_infrared_config.venv_dir }}/bin/activate"
     log_file="{{ tobiko_infrared_config.log_file }}"
     args=( {{ infrared_args }} )
-    (set -x; infrared "${args[@]}")
+    (set -x; infrared "${args[@]}") 2> "{{ tobiko_infrared_config.log_file }}"
   args:
     chdir: "{{ tobiko_infrared_config.src_dir }}"
     executable: /bin/bash
   register: infrared_exec
   ignore_errors: yes
+  when: not tobiko_infrared_config.dry_run
 
 
 - name: write infrared operation to log file
@@ -19,9 +20,10 @@
     insertafter: EOF
     dest: "{{ tobiko_infrared_config.log_file }}"
     line: >
-      {{ infrared_exec.stderr }}
       {{ infrared_exec.stdout }}
-  when: not tobiko_infrared_config.dry_run
+  when:
+    - not tobiko_infrared_config.dry_run
+    - infrared_exec.stdout
 
 
 - name: report Infrared failure
@@ -30,3 +32,4 @@
       Command infrared {{ infrared_args }} has failed:
       {{ infrared_exec.stderr }}
   when: infrared_exec is failed
+  when: not tobiko_infrared_config.dry_run
