Fix infrared cloud setup and cleanup.

--- a/roles/tobiko-infrared/tasks/cleanup.yml
+++ b/roles/tobiko-infrared/tasks/cleanup.yml
@@ -10,11 +10,12 @@
         --host-key "{{ tobiko_infrared_config.virsh.host_key }}"
         --cleanup yes
 
+
 - name: remove files
   file:
     path: "{{ item }}"
     state: absent
-  items:
+  with_items:
     - "{{ tobiko_infrared_config.src_dir }}"
     - "{{ tobiko_infrared_config.log_file }}"
     - "{{ tobiko_infrared_config.venv_dir }}"
