Check plugin installation is succeeded before creating tripleo-upgrade symlink

--- a/roles/tobiko-infrared/tasks/init.yml
+++ b/roles/tobiko-infrared/tasks/init.yml
@@ -47,6 +47,8 @@
     src: "{{ tobiko_infrared_config.src_dir }}/plugins"
     dest: "{{ tobiko_infrared_config.src_dir }}/plugins/tripleo-upgrade/infrared_plugin/roles"
     state: link
+  when:
+    - infrared_exec is succeeded
 
 
 - name: set mirror infrared option
