Check InfraRed command result by default

--- a/roles/tobiko-infrared/tasks/infrared/exec.yml
+++ b/roles/tobiko-infrared/tasks/infrared/exec.yml
@@ -31,5 +31,5 @@
           Command infrared {{ infrared_args }} has failed:
           {{ infrared_exec.stderr }}
       when: 
-        - check
+        - check | default(true)
         - infrared_exec is failed
