--- a/roles/tobiko-infrared/tasks/cleanup.yml
+++ b/roles/tobiko-infrared/tasks/cleanup.yml
@@ -1,12 +1,26 @@
 
 ---
 
+- name: check virsh provision file exists
+  stat:
+    path: "{{ tobiko_infrared_config.virsh.prov_file }}"
+  register: virsh_prov_file_stat
+
+
 - name: cleanup OpenStack hypervisor host
   include_tasks: infrared/exec.yml
   vars:
     infrared_args: >
       virsh
-        --host-address "{{ tobiko_infrared_config.virsh.host_address }}"
-        --host-key "{{ tobiko_infrared_config.virsh.host_key }}"
+        --from-file={{ tobiko_infrared_config.virsh.prov_file | quote }}
         --cleanup yes
+  when: virsh_prov_file_stat.stat.exists
 
+
+- name: remove virsh provision files
+  file:
+    path: "{{ item }}"
+    state: absent
+  with_items:
+    - "{{ tobiko_infrared_config.virsh.prov_file }}"
+    - "{{ tobiko_infrared_config.virsh.generated_prov_file }}"
