--- a/roles/tobiko-infrared/tasks/init.yml
+++ b/roles/tobiko-infrared/tasks/init.yml
@@ -12,15 +12,26 @@
   with_items: "{{ tobiko_read_config_file.results }}"
 
 
-- name: get sources
+- name: set derived config variables
+  set_fact:
+    virsh_config: "{{ tobiko_infrared_config.virsh }}"
+    tripleo_undercloud_config: "{{ tobiko_infrared_config.tripleo_undercloud }}"
+    tripleo_overcloud_config: "{{ tobiko_infrared_config.tripleo_overcloud }}"
+    tobiko_infrared_mirror: >
+      {% if (tobiko_infrared_config.mirror | default(false)) %}
+         --mirror {{ tobiko_infrared_config.mirror | quote }}
+      {% endif %}
+
+
+- name: get InfraRed sources
   git:
     repo: "{{ tobiko_infrared_config.git_repo }}"
     dest: "{{ tobiko_infrared_config.src_dir }}"
-    update: false
+    update: "{{ tobiko_infrared_config.update_sources }}"
   register: tobiko_infrared_get_sources
 
 
-- name: pupulate virtualenv
+- name: install InfraRed
   pip:
     name:
       - setuptools
@@ -32,25 +43,20 @@
     state: latest
     virtualenv: "{{ tobiko_infrared_config.venv_dir }}"
   when: tobiko_infrared_get_sources is changed
+  register: tobiko_infrared_install
 
 
-- name: install InfraRed plugins
-  include_tasks: ../infrared/exec.yml
-  vars:
-    infrared_args: >
-      plugin add all
+- when: tobiko_infrared_install is changed
+  block:
 
+    - name: install InfraRed plugins
+      include_tasks: ../infrared/exec.yml
+      vars:
+        infrared_args: >
+          plugin add all
 
-- name: simlink plugin roles into InfraRed tripleo-upgrade plugin
-  file:
-    src: "{{ tobiko_infrared_config.src_dir }}/plugins"
-    dest: "{{ tobiko_infrared_config.src_dir }}/plugins/tripleo-upgrade/infrared_plugin/roles"
-    state: link
-
-
-- name: set mirror infrared option
-  set_fact:
-    tobiko_infrared_mirror: >
-      {% if (tobiko_infrared_config.mirror | default(false)) %}
-         --mirror {{ tobiko_infrared_config.mirror | quote }}
-      {% endif %}
+    - name: simlink plugin roles into InfraRed tripleo-upgrade plugin
+      file:
+        src: "{{ tobiko_infrared_config.src_dir }}/plugins"
+        dest: "{{ tobiko_infrared_config.src_dir }}/plugins/tripleo-upgrade/infrared_plugin/roles"
+        state: link
